# postgres-job-queue

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  init_schema.py  pyproject.toml  runserver.py  setup.cfg
env/: local.env  test.env
jobq/: __init__.py  constants.py  db.py  job_worker.py  logger.py  schema.sql  transaction.py
jobq/handlers/: web.py
jobq/models/: job.py
jobq/service/: __init__.py  job_db_service.py  job_execution_service.py  job_service.py  job_worker_service.py
jobq/templates/: index.html
tests/: __init__.py  jobs_test.py
